--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon  -r dotenv/config --experimental-json-modules  server.js"
+    "dev": "nodemon  -r dotenv/config --experimental-json-modules  server.js",
+    "build": "node server.js"
   },
   "author": "",
   "license": "ISC",
