--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon  -r dotenv/config --experimental-json-modules  server.js",
-    "build": "node -r dotenv/config --experimental-json-modules server.js"
+    "dev": "nodemon server.js",
+    "build": "node -r dotenv/config --experimental-json-modules server.js",
+    "start": "node -r dotenv/config --experimental-json-modules server.js"
   },
   "author": "",
   "license": "ISC",
